<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015 PocketHub
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_github_home_black_24dp"
            android:checked="true"
            android:title="@string/home" />
        <item
            android:id="@+id/navigation_gists"
            android:icon="@drawable/ic_github_gist_black_24dp"
            android:title="@string/gists" />
        <item
            android:id="@+id/navigation_issue_dashboard"
            android:icon="@drawable/ic_github_dashboard_black_24dp"
            android:title="@string/issue_dashboard" />
        <item
            android:id="@+id/navigation_bookmarks"
            android:icon="@drawable/ic_github_bookmark_black_24dp"
            android:title="@string/bookmarks" />
    </group>
    <item
        android:id="@+id/navigation_organizations"
        android:title="@string/organizations">
        <menu/>
    </item>
    <group
        android:id="@+id/navigation_secondary"
        android:checkableBehavior="none">
        <item
            android:id="@+id/navigation_log_out"
            android:checkable="false"
            android:icon="@drawable/ic_github_sign_out_black_24dp"
            android:title="@string/log_out"/>
    </group>
</menu>
