<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015 PocketHub
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/m_comment"
        android:icon="@drawable/ic_comment_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/comment"/>
    <item
        android:id="@+id/m_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        app:showAsAction="never"
        android:title="@string/delete"/>
    <item
        android:id="@+id/m_star"
        android:icon="@drawable/ic_star_white_24dp"
        app:showAsAction="never"
        android:title="@string/star"/>
    <item
        android:id="@+id/m_share"
        android:icon="@android:drawable/ic_menu_share"
        app:showAsAction="never"
        android:title="@string/share"/>
    <item
        android:id="@+id/m_refresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        app:showAsAction="never"
        android:title="@string/refresh"/>

</menu>
