<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015 PocketHub
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/m_bookmark"
        android:icon="@drawable/ic_bookmark_white_24dp"
        app:showAsAction="never"
        android:title="@string/bookmark"/>
    <item
        android:id="@+id/m_filter"
        android:icon="@drawable/ic_filter_list_white_24dp"
        app:showAsAction="never"
        android:title="@string/filter"/>
    <item
        android:id="@+id/create_issue"
        android:icon="@drawable/ic_add_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/create"/>
    <item
        android:id="@+id/m_search"
        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:title="@string/find_issues"/>
    <item
        android:id="@+id/m_refresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        app:showAsAction="never"
        android:title="@string/refresh"/>

</menu>
