<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2015 PocketHub
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ToolbarTheme"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:layout_alignParentTop="true"
        android:id="@+id/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                style="@style/HeaderTitleText"
                android:text="@string/section_issue_status" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/inset_background"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_open"
                    style="@style/SubtitleText"
                    android:text="@string/status_open"
                    android:textColor="@color/text" />

                <RadioButton
                    android:id="@+id/rb_closed"
                    style="@style/SubtitleText"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/status_closed"
                    android:textColor="@color/text" />
            </RadioGroup>

            <TextView
                android:id="@+id/tv_assignee_label"
                style="@style/HeaderTitleText"
                android:paddingTop="5dp"
                android:text="@string/section_issue_assigned" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/inset_background"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/iv_avatar"
                    style="@style/AvatarLarge"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/avatar" />

                <TextView
                    android:id="@+id/tv_assignee"
                    style="@style/SubtitleText"
                    android:layout_width="match_parent"
                    android:includeFontPadding="true"
                    android:singleLine="true"
                    android:text="@string/assignee_anyone"
                    android:textColor="@color/text" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_milestone_label"
                style="@style/HeaderTitleText"
                android:paddingTop="15dp"
                android:text="@string/section_issue_milestone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/inset_background"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tv_milestone"
                    style="@style/SubtitleText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:singleLine="true"
                    android:textColor="@color/text" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_labels_label"
                style="@style/HeaderTitleText"
                android:paddingTop="15dp"
                android:text="@string/section_issue_labels" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/inset_background"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tv_labels"
                    style="@style/SubtitleText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/none"
                    android:textColor="@color/text" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
