<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015 PocketHub
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

  <item
    android:id="@+id/m_wrap"
    app:showAsAction="never"
    android:title="@string/enable_wrapping"/>
  <item
    android:id="@+id/m_render_markdown"
    android:enabled="false"
    app:showAsAction="never"
    android:title="@string/render_markdown"
    android:visible="false"/>
  <item
    android:id="@+id/m_share"
    android:icon="@android:drawable/ic_menu_share"
    app:showAsAction="never"
    android:title="@string/share"/>

</menu>
