<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2015 PocketHub
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ToolbarTheme" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <CheckBox
                android:id="@+id/cb_public"
                style="@style/SubtitleText"
                android:layout_height="@dimen/touch_target"
                android:layout_gravity="end"
                android:paddingRight="10dp"
                android:paddingEnd="10dp"
                android:text="@string/make_public"
                android:textColor="@color/text"
                android:theme="@style/Theme.GitHub.CheckBoxLight" />

            <View style="@style/Separator" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp">

                <TextView
                    style="@style/TitleText"
                    android:text="@string/description" />

                <EditText
                    android:id="@+id/et_gist_description"
                    style="@style/FormalSingleLineEditText"
                    android:layout_width="match_parent" />

                <TextView
                    style="@style/TitleText"
                    android:paddingTop="15dp"
                    android:text="@string/file_name" />

                <EditText
                    android:id="@+id/et_gist_name"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true" />

                <TextView
                    style="@style/TitleText"
                    android:paddingTop="15dp"
                    android:text="@string/file_content" />

                <EditText
                    android:id="@+id/et_gist_content"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top"
                    android:inputType="textMultiLine|textAutoComplete"
                    android:minLines="5"
                    android:padding="10dp"
                    android:scrollbars="horizontal|vertical"
                    android:typeface="monospace">

                    <requestFocus />
                </EditText>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
